# ExoCubed

./: .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  a.patch  b.patch  configure.hpp.in  main.cpp.in  run_pv.com
cmake/: athena.cmake  compilers.cmake  exo3.cmake  hjupiter.cmake  parameters.cmake  setup_compiler_flags.cmake  setup_configure.cmake
cmake/modules/: FindEigen3.cmake  FindPNetCDF.cmake
data/: .gitignore
data/CK_data/: MgSiO3_amorph_reff.txt  NASA_9_poly.txt  sw_band_flux_HD189_11.txt  wavelengths_GCM_11.txt
data/CK_data/cia/: H2-H2_reform.cia  H2-H_reform.cia  H2-He_reform.cia  He-H_reform.cia
data/CK_data/ck/: PM_ck_HELIOSK_cond_11_nOPT_wcia.txt  PM_ck_HELIOSK_cond_11_nUVOPT.txt
data/CK_data/ray/: Ray_H2_11.txt  (+3 more)
examples/: CMakeLists.txt
examples/2023-Chen-exo3/: .gitignore  CMakeLists.txt  W92.cpp  calc_avg.py  general_ic_globe.cpp  general_ic_globe.inp  hot_jupiter.cpp  hot_jupiter.inp  hot_jupiter.yaml  hs94-stable20.inp  hs94.cpp  hs94.inp  noisy_globe.py  polar_dry.cpp  polar_dry.inp  test_blast.cpp
examples/2023-Li-saturn-vla/: CMakeLists.txt
examples/2023-Li-uranus/: CMakeLists.txt
examples/2023-jupiter-mwr-eq/: CMakeLists.txt
examples/2024-Lian-venus-pv/: CMakeLists.txt  venus.cpp  venus.inp
examples/2024-XZhang-cloud-rt/: CMakeLists.txt  hjupiter.cpp  hjupiter.inp  hjupiter.yaml  hywater.yaml  test_convadj.cpp  test_convadj.inp
linfel/: README  calc_avg_pres.py  convert_to_polar.py  height_to_pres.py  height_to_pres_v2.py  plot_isobar.py  plot_pt_profile.py  plot_temp_wind_equator.py  plot_temp_wind_isobaric.py  plot_zonal_mean_wind.py
linfel/linshi/: linshi_convert_to_polar.py
linfel/no_use/: calc_avg_pres.py  height_to_pres_old.py  plot_pt_profile_old.py  plot_zonal_mean.py
patches/: 19.calculate_fluxes.patch  26.cs_adiabatic_hydro.patch  27.cs_coordinates.patch  28.cs_bvals_cc.patch  29.cs_bvals_var.patch  30.cs_bvals_base.patch  31.cs_calculate_fluxes.patch  32.cs_task_list.patch  _29.cs_bvals_var.patch
src/: CMakeLists.txt  a.diff  affine_coordinates.cpp  air_parcel.cpp  air_parcel.hpp  checks.cpp  checks.hpp  correct_fluxes_cubed_sphere.cpp  cubed_sphere_coord.cpp  gnomonic_equiangle.cpp  impl.cpp  impl.hpp  main.cpp  mesh_extra.cpp  setup_input_and_init_mesh.cpp  transform_ox_for_cubed_sphere.cpp  virtual_groups.hpp
src/astro/: celestrial_body.cpp
src/bvals/: bvals.hpp  bvals_base.cpp  bvals_cube.cpp
src/climath/: broyden_root.c  broyden_root.h  broyden_root_utils.c  broyden_root_utils.h
src/diagnostics/: buoyancy.cpp  convective_heat_flx.cpp  curl.cpp  diagnostics.cpp  diagnostics.hpp  diagnostics_factory.cpp  divergence.cpp  eddy_flux.cpp  eddy_kinetic_energy.cpp  latent_heating.cpp  pressure_anomaly.cpp  radiative_flux.cpp  spherical_angular_momentum.cpp  temperature_anomaly.cpp
src/eos/: shallow_water_hydro.cpp
src/exchanger/: exchanger.cpp  exchanger.hpp  neighbor_exchanger.hpp  planer_exchanger.hpp
src/exo3/: cs_find_block_id.cpp  cs_interpolate.cpp  cs_latlon.cpp  cs_mesh_generator.cpp  cs_transform_ox.cpp  cs_vector.cpp  cs_velocity.cpp  cubed_sphere.cpp  cubed_sphere.hpp  cubed_sphere_funcs.hpp  cubed_sphere_lr.cpp  cubed_sphere_lr.hpp  cubed_sphere_transform.cpp  cubed_sphere_utility.cpp  gnomonic_equiangle.cpp  gnomonic_equiangle.hpp  transform_ox.cpp
src/harp/: radiation.cpp  radiation.hpp  radiation_band_exchanger.cpp  rt_solver_disort.cpp  rt_solvers.hpp
src/hydro/: calculate_fluxes.cpp  cubedsphere_fluxes.cpp
src/hydro/decomposition/: apply_boundary_condition.cpp  change_to_buoyancy.cpp.sav  change_to_perturbation.cpp  decomposition.cpp  decomposition.hpp
src/hydro/implicit/: communication.hpp  flux_decomposition.hpp  forcing_jacobians.hpp  forward_backward.hpp  full_correction.cpp  implicit_solver.cpp  implicit_solver.hpp  partial_correction.cpp  periodic_forward_backward.hpp
src/hydro/rsolvers/hydro/: hllc_transform.cpp  lmars_shallow_water.cpp  roe_shallow_water.cpp
src/mesh/: block_index.cpp  block_index.hpp  meshblock_impl.cpp  meshblock_impl.hpp
src/microphysics/: microphysics.cpp  microphysics.hpp
src/nbody/: particle_data.cpp  particle_exchanger.cpp  particles.hpp
src/opacity/: CMakeLists.txt  absorber_ck.cpp  absorber_ck.hpp  cia_read.cpp  cia_read.hpp  ck_opacity_mod.f90  ck_opacity_mod.mod  flux_wavelength.cpp  flux_wavelength.hpp  helios_ck_premix.cpp  ray_read.cpp  ray_read.hpp  read_cia_ff.cpp  read_file.cpp  read_file.hpp
src/others/: CMakeLists.txt  convective_adjustment.cpp  vector_conadj.cpp  vector_conadj.hpp
src/reconstruct/: face_reconstruct.cpp  face_reconstruct.hpp  fit_polynomial_inflection.nb  interp_weno3.hpp  interp_weno5.hpp  interpolation.hpp  weno5.cpp  weno5_simple.cpp
src/single_column/: CMakeLists.txt  convective_adjustment.cpp  convective_adjustment.hpp  single_column.cpp  single_column.hpp  vector_conadj.cpp  vector_conadj.hpp
src/snap/decomposition/: change_to_perturbation.cpp
src/snap/eos/: ideal_moist_hydro.cpp
src/snap/implicit/: implicit_solver.hpp  solve_implicit_3d.cpp
src/snap/riemann/: hllc_transform.cpp  roe_shallow_yz.cpp
src/snap/thermodynamics/: rk4_integrate_lnp.cpp  rk4_integrate_z.cpp  thermodynamics.cpp  thermodynamics.hpp
src/tasklist/: implicit_hydro_tasks.cpp
test_utils/: combine.py  plot_rho.py  transform_affine.py  transform_affine_v2.py
tests/: .gitignore  CMakeLists.txt  ck_print.cpp  main.cpp  random_injection.cpp  random_injection.inp  test_Rossby_Haurwitz.cpp  test_blast.cpp  test_blast.inp  test_cia_read.cpp  test_ck.cpp  test_conadj_case.cpp  test_convective_adjustment.cpp  test_convective_adjustment.hpp  test_convective_adjustment.inp  test_coordinates.cpp  test_coordinates.inp  test_coordinates.out  test_dummy_winds.cpp  test_dummy_winds.inp  test_flux_wavelength.cpp  test_ghost_cells.cpp  test_ghost_cells.inp  test_hjucon.cpp  test_isothermal.cpp  test_isothermal.inp  test_optable.cpp  test_ray_read.cpp  test_read_file.cpp  test_read_stellar_flux.cpp  test_shallow_water.cpp  test_shallow_water.inp  test_shallow_water_cyl.inp
tools/: build_greatlakes.sh
(+15 files in other folders)
